footer overal aangepast, favicon toegevoegd overal, linken oveal juist gezet(denk ik) en bestel bevestiging

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -179,6 +179,7 @@
                 font-family: $headerFont;
             }
             a{
+                text-decoration: none;
                 color: $primary2Color;
                 ion-icon{
                     font-size: $iconSize;
