--- a/scss/over_ons.css
+++ b/scss/over_ons.css
@@ -219,6 +219,7 @@ body .fullpage footer .column2-footer h2 {
 }
 
 body .fullpage footer .column2-footer a {
+  text-decoration: none;
   color: #fdfffc;
 }
 
