--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -65,7 +65,7 @@
         button{
             border: none;
             outline: none;
-            span{
+            div{
                 .hamburger{
                     position: relative;
                     display: flex;
