--- a/scss/over_ons.css
+++ b/scss/over_ons.css
@@ -310,7 +310,7 @@ body .fullpage .uber-main-container main .row .column-content h1 {
 
 body .fullpage .uber-main-container main .row .column-content h1 h4 {
   font-family: proxima-soft, sans-serif;
-  font-size: 1rem;
+  font-size: 130px;
 }
 
 body .fullpage .uber-main-container main .row .column-content p {
