--- a/scss/over_ons.scss
+++ b/scss/over_ons.scss
@@ -51,7 +51,7 @@ body{
                     font-size:$headerFontSize;
                     h4{
                         font-family: $bodyFont;
-                        font-size: $bodyFontSize;
+                        font-size:130px;
                     }
                     }
                     p{
