Winkelmandje staan onder elkaar

--- a/scss/winkelmandje.scss
+++ b/scss/winkelmandje.scss
@@ -46,7 +46,7 @@ body{
                         }
                         .winkelmandje-details-box-info{
                             font-family: $bodyFont;
-                            border-bottom: 1px solid $primary1Color;
+                            //border-bottom: 1px solid $primary1Color;
                             .winkelmandje-details-box-info-details{
                                 width: 100%;
                                 .winkelmandje-details-box-info-details-product{
